--- a/submit/index.html
+++ b/submit/index.html
@@ -685,7 +685,7 @@
         Annotation Benchmark</b> (SOTAB)</a>[<a href = "#toc9">1</a>]. There are two multi-class classification tasks: <a
         href="https://paperswithcode.com/task/column-type-annotation">Column Type Annotation (CTA)</a> 
         and <a href="https://paperswithcode.com/task/columns-property-annotation">Columns Property
-        Annotation (CPA)</a> CTA involves predicting the column type, while CPA involves predicting the column properties or relations.
+        Annotation (CPA)</a>. CTA involves predicting the column type, while CPA involves predicting the column properties or relations.
         All of our experiments and code are available in our <a href = "https://github.com/wbsg-uni-mannheim-students/table-annotation-using-deep-learning">GitHub repository.</a>
     </p>
       
@@ -735,22 +735,15 @@
     </ul>
 
 
-
-
-
     <span id="toc1"></span>
     <h2>1. Introduction</h2>
     <p>
-      Table annotation is the process of adding descriptive labels to tables in a large dataset using concepts from a knowledge 
-      graph or shared vocabulary. This process is crucial for effective data search and integration, especially since the web 
-      contains millions of high-quality tables available on websites and public data portals such as Wikipedia. 
-      However, to utilize these tables, we need to understand their structure and schema, which can be challenging due to their heterogeneous 
-      or unknown headers and content. The objective of this project is to address the aforementioned challenges by 
-      proficiently utilizing diverse deep learning methods for both Column Type annotation and Columns Property Annotation tasks.
+      Table annotation is the process of adding descriptive labels to tables in a large dataset using concepts from a knowledge graph or shared vocabulary. This process is crucial for effective data search and integration, especially since the web contains millions of high-quality tables available on websites and public data portals such as Wikipedia. 
+      However, to utilize these tables, we need to understand their structure and schema, which can be challenging due to their heterogeneous or unknown headers and content. The objective of this project is to address the aforementioned challenges by proficiently utilizing diverse deep learning methods for both Column Type annotation and Columns Property Annotation tasks.
     </p>
 
     <span id="toc2"></span>
-    <h2>2. Theoretical Background </h2>
+    <h2>2. Theoretical Background</h2>
     <p>
       This Chapter provides an overview of the theoretical underpinnings, frameworks as well as specific information relevant 
       to follow our work. For this reason, we start by introducing the main tasks we are trying to solve. 
@@ -759,7 +752,7 @@
     </p>
 
     <span id="toc2.1"></span>
-    <h3>2.1 Column Type Annotation (CTA) </h3>
+    <h3>2.1 Column Type Annotation (CTA)</h3>
     <p>
       CTA is the task of annotating table columns with the type of entities described in the column. 
       Type of entities can be classified into two categories:
@@ -771,53 +764,82 @@
     </p>
 
     <span id="toc2.2"></span>
-    <h3>2.2 Columns Property Annotation (CPA) </h3>
+    <h3>2.2 Columns Property Annotation (CPA)</h3>
     <p>
 
     </p>
 
     <span id="toc2.3"></span>
-    <h3>2.3 Transformer </h3>
+    <h3>2.3 Transformer</h3>
     <p>
 
     </p>
 
     <span id="toc3"></span>
-    <h2> 3. Related Work </h2>
+    <h2>3. Related Work</h2>
     <p>
 
     </p>
 
 
     <span id="toc4"></span>
-    <h2> 4. Experimental Setup</h2>
+    <h2>4. Methodology</h2>
 
     <p>
 
     </p>
 
+    <span id="toc4.1"></span>
+    <h3>4.1 Preprocessing</h3>
+    <p>
+
+    </p>
+
+    <span id="toc4.2"></span>
+    <h3>4.2 Augmentation</h3>
+    <p>
+
+    </p>
+
+    <span id="toc4.3"></span>
+    <h3>4.3 Serialization</h3>
+    <p>
+
+    </p>
+
+	<span id="toc4.4"></span>
+    <h3>4.3 Further Model</h3>
+    <p>
+
+    </p>
 
     <span id="toc5"></span>
-    <h2> 5. Error Analysis</h2>
+    <h2>5. Experimental Setup</h2>
     <p>
 
     </p>
 
     <span id="toc6"></span>
-    <h2> 6. Discussion </h2>
+    <h2>6. Experimental Results and Error Analysis</h2>
+    <p>
+
+    </p>
+
+    <span id="toc6"></span>
+    <h2>6. Discussion</h2>
     <p>
 
     </p>
 
     <span id="toc7"></span>
-    <h2> 7. Conclusion</h2>
+    <h2>7. Conclusion</h2>
 
     <p>
 
     </p>
 
     <span id="toc8"></span>
-    <h2> 8. References </h2>
+    <h2>8. References</h2>
 
     <p>
       <span id="toc9"></span>
