--- a/submit/index.html
+++ b/submit/index.html
@@ -769,14 +769,14 @@
 
     </p>
 
-    <span id="toc2.3"></span>
-    <h3>2.3 Transformer</h3>
+    <span id="toc3"></span>
+    <h2>3. Related Work</h2>
     <p>
 
     </p>
 
-    <span id="toc3"></span>
-    <h2>3. Related Work</h2>
+    <span id="toc3.1"></span>
+    <h3>3.1 Transformers</h3>
     <p>
 
     </p>
