--- a/submit/index.html
+++ b/submit/index.html
@@ -772,7 +772,7 @@
     <span id="toc3"></span>
     <h2>3. Related Work</h2>
     <p>
-
+    We need to discuss some existing papers that we have referred here. I.e. the approach by DODUO, TURL and maybe TUTA.
     </p>
 
     <span id="toc3.1"></span>
@@ -780,13 +780,14 @@
     <p>
 
     </p>
+    
+
 
 
     <span id="toc4"></span>
-    <h2>4. Methodology</h2>
-
+    <h2>4. Dataset and Methodology</h2>
     <p>
-
+    In the following we present the Transformer model utilizing primary serialization, i.e., Single Column serialization and further refinement on two different datasets SOTAB Benchmark and TURL respectively.
     </p>
 
     <span id="toc4.1"></span>
