--- a/submit/index.html
+++ b/submit/index.html
@@ -863,34 +863,19 @@
       <p></p>
 
       <span id="toc4"></span>
-      <h2>4. Dataset and Preprocessing</h2>
+      <h2>4. Model</h2>
       <p>
-        In the following we present the Transformer model utilizing primary
-        serialization, i.e., Single Column serialization and further refinement
-        on two different datasets SOTAB Benchmark and TURL respectively.
       </p>
 
  	  <span id="toc4.1"></span>
-      <h3>4.1 Datasets</h3>
-      <p></p>
-
-      <span id="toc4.2"></span>
       <h3>4.1 Preprocessing</h3>
       <p></p>
 
-      <span id="toc4.3"></span>
+      <span id="toc4.2"></span>
       <h3>4.2 Augmentation</h3>
       <p></p>
 
-      <span id="toc5"></span>
-      <h2>5. Experimental Setup</h2>
-      <p>
-        In the following we present the Transformer model utilizing primary
-        serialization, i.e., Single Column serialization and further refinement
-        on two different datasets SOTAB Benchmark and TURL respectively.
-      </p>
-
-      <span id="toc5.1"></span>
+      <span id="toc4.3"></span>
       <h3>4.3 Serialization</h3>
       <p>
         <b>(i) Neighboring column</b>
@@ -901,8 +886,8 @@
       <p>
         <b>(iii) Others</b>
       </p>
-      <span id="toc5.2"></span>
-      <h3>4.3 Further Model</h3>
+      <span id="toc4.4"></span>
+      <h3>4.4 Further Model</h3>
       <p>
         <b>(i) Two-Step Model:</b>
       </p>
@@ -912,6 +897,20 @@
       <p>
         <b>(ii) LongFormer:</b>
       </p>
+
+      <span id="toc5"></span>
+      <h2>5. Evaluation</h2>
+      <p>
+      </p>
+
+ 	  <span id="toc5.1"></span>
+      <h3>5.1 Dataset</h3>
+      <p></p>
+
+      <span id="toc5.2"></span>
+      <h3>5.2 Baselines</h3>
+      <p></p>
+     
 
       <span id="toc6"></span>
       <h2>6. Experimental Results and Error Analysis</h2>
