--- a/submit/index.html
+++ b/submit/index.html
@@ -828,15 +828,20 @@
         </li>
         <li class="toc-h2 toc-active">
           <a href="#toc3"> 3. Related Work</a>
+          <ul>
+            <li>
+              <a href="#toc3.1">3.1 Transfomers</a>
+            </li>
+          </ul>
         </li>
         <li class="toc-h2 toc-active">
-          <a href="#toc4"> 4. Experimental Results </a>
+          <a href="#toc4"> 4. Model </a>
         </li>
         <li class="toc-h2 toc-active">
-          <a href="#toc5"> 5. Error Analysis </a>
+          <a href="#toc5"> 5. Evaluation </a>
         </li>
         <li class="toc-h2 toc-active">
-          <a href="#toc6"> 6. Discussion </a>
+          <a href="#toc6"> 6. Experimental Results and Error Analysis </a>
         </li>
         <li class="toc-h2 toc-active">
           <a href="#toc7"> 7. Conclusion </a>
@@ -845,10 +850,59 @@
           <a href="#toc8"> 8. References </a>
         </li>
       </ul>
-      <p>Entity types can capture more domain semantics than data types</p>
+      <span id="toc1"></span>
+      <h2>1. Introduction</h2>
+      <p>
+        Table annotation is the process of adding descriptive labels to tables
+        in a large dataset using concepts from a knowledge graph or shared
+        vocabulary. This process is crucial for effective data search and
+        integration, especially since the web contains millions of high-quality
+        tables available on websites and public data portals such as Wikipedia.
+        However, to utilize these tables, we need to understand their structure
+        and schema, which can be challenging due to their heterogeneous or
+        unknown headers and content. The objective of this project is to address
+        the aforementioned challenges by proficiently utilizing diverse deep
+        learning methods for both Column Type annotation and Columns Property
+        Annotation tasks.
+      </p>
 
+      <span id="toc2"></span>
+      <h2>2. Theoretical Background</h2>
+      <p>
+        This Chapter provides an overview of the theoretical underpinnings,
+        frameworks as well as specific information relevant to follow our work.
+        For this reason, we start by introducing the main tasks we are trying to
+        solve. We also give a brief introduction to transformer models which
+        formed the basis for the algorithms we use.
+      </p>
+      <span id="toc2.1"></span>
+      
+      <h3>2.1 Column Type Annotation (CTA)</h3>
+      <p>
+        CTA is the task of annotating table columns with the type of entities
+        described in the column. Type of entities can be classified into two
+        categories:
+      </p>
+      <ul>
+        <li>
+          <strong>Data types:</strong> format of the entities, e.g. string,
+          integer, boolean...
+        </li>
+        <li>
+          <strong>Entity types:</strong> description of the entites, e.g.
+          country, product, person...
+        </li>
+      </ul>
+     <p>
+        Entity types can capture more domain semantics than data types
+     </p> 
+      
       <span id="toc2.2"></span>
       <h3>2.2 Columns Property Annotation (CPA)</h3>
+      <p></p>
+
+      <span id="toc2.3"></span>
+      <h3>2.3 Transformer</h3>
       <p></p>
 
       <span id="toc3"></span>
