--- a/submit/index.html
+++ b/submit/index.html
@@ -924,6 +924,7 @@
 
  	  <span id="toc4.1"></span>
       <h3>4.1 Preprocessing</h3>
+      With token limit of 512 tokens for BERT-like language models, we identify the need to trim cell values for longer textual data to fit more cells from a table. Follow suit the empirical studies by Wang et al. [<a href="#toc16">8</a>]
       <p></p>
 
       <span id="toc4.2"></span>
@@ -937,6 +938,7 @@
       </p>
       <p>
         <b>(ii) TaBERT</b>
+
       </p>
       <p>
         <b>(iii) Others</b>
@@ -974,6 +976,12 @@
 
       <span id="toc6"></span>
       <h2>6. Experimental Results and Error Analysis</h2>
+
+      <span id="toc6.1"></span>
+      <h3>6.1 Results and Ablation Study></h3>
+
+      <span id="toc6.2"></span>
+      <h3>6.2 Error Analysis</h3>
       <p>
         We performed error analysis on the best result obtained from neighbor
         serialization with a window size of 2. To do this, we sampled errors in
@@ -1118,6 +1126,10 @@
         “Annotating columns with pre-trained language models.” In Proceedings of
         the 2022 International Conference on Management of Data, 2022, pp.
         1493–1503
+
+        <span id="toc16"></span>
+        [8] Wang, Z., Dong, H., Jia, R., Li, J., Fu, Z., Han, S., & Zhang, D. (2020). TUTA: Tree-based Transformers for Generally Structured Table Pre-training. Proceedings of the 27th ACM SIGKDD Conference on Knowledge Discovery & Data Mining.
+
       </p>
 
       <p>&nbsp;</p>
