--- a/submit/index.html
+++ b/submit/index.html
@@ -978,7 +978,7 @@
       <h2>6. Experimental Results and Error Analysis</h2>
 
       <span id="toc6.1"></span>
-      <h3>6.1 Results and Ablation Study></h3>
+      <h3>6.1 Results and Ablation Study</h3>
 
       <span id="toc6.2"></span>
       <h3>6.2 Error Analysis</h3>
